--- a/src/app/employees-list/employees-list.component.html
+++ b/src/app/employees-list/employees-list.component.html
@@ -1,6 +1,16 @@
-<p>employees-list works!</p>
-<ol>
-    <li *ngFor="let e of employees">
-        {{e | json}}
-    </li>
-</ol>
+<table>
+  <tr>
+    <th>Emp ID</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Manager ID</th>
+    <th>Hire Date</th>
+  </tr>
+  <tr *ngFor="let e of employees">
+    <td>{{e.id}}</td>
+    <td>{{e.firstname}}</td>
+    <td>{{e.lastname}}</td>
+    <td>{{e.mgrid}}</td>
+    <td>{{e.hiredate | date:'fullDate'}}</td>
+  </tr>
+</table>
