Add New Emp Component

--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,6 +1,6 @@
 <a routerLink="/employeesList">
     List All Employes
 </a>
-<a routerLink="/employeesList" style="padding-left: 15px">
+<a routerLink="/addNewEmployee" style="padding-left: 15px">
     Add New Employes
 </a>
