--- a/src/app/employees-list/employees-list.component.html
+++ b/src/app/employees-list/employees-list.component.html
@@ -5,6 +5,7 @@
     <th>Last Name</th>
     <th>Manager ID</th>
     <th>Hire Date</th>
+    <th>Update Action</th>
   </tr>
   <tr *ngFor="let e of employees">
     <td>{{e.id}}</td>
@@ -12,5 +13,9 @@
     <td>{{e.lastname}}</td>
     <td>{{e.mgrid}}</td>
     <td>{{e.hiredate | date:'fullDate'}}</td>
+    <td>
+      <button (click)="onUpdate(e.id)">Update</button>
+      <button (click)="onDelete(e.id)">Delete</button>
+    </td>
   </tr>
 </table>
