--- a/src/app/add-new-employee/add-new-employee.component.html
+++ b/src/app/add-new-employee/add-new-employee.component.html
@@ -2,7 +2,7 @@
 	<table>
 		<tr *ngIf="inupdatemode">
 			<td> Emp ID : </td>
-			<td>{{id}}</td>
+			<td>{{employeeId}}</td>
 		</tr>
 		<tr>
 			<td> FirstName : </td>
