--- a/src/app/employees-list/employees-list.component.html
+++ b/src/app/employees-list/employees-list.component.html
@@ -14,7 +14,7 @@
     <td>{{e.mgrid}}</td>
     <td>{{e.hiredate | date:'fullDate'}}</td>
     <td>
-      <button [routerLink]="['addNewEmployee',e.id]">Update</button>
+      <button [routerLink]="['/addNewEmployee',e.id]">Update</button>
       <button (click)="onDelete(e.id)">Delete</button>
     </td>
   </tr>
