--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm" (ngSubmit)="login(form)">
+<form #form="ngForm" (ngSubmit)="register(form)">
   <input type="text" name="username" #username="ngModel" ngModel required placeholder="Username"> <br>
   <input type="text" name="password" #password="ngModel" ngModel required placeholder="Password"><br>
   <button>Register</button>
