--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -3,3 +3,4 @@
   <input type="text" name="password" #password="ngModel" ngModel required placeholder="Password"><br>
   <button>Register</button>
 </form>
+{{userInfoMessage}}
