--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -4,3 +4,6 @@
 <a [routerLink]="['/addNewEmployee','-1']" style="padding-left: 15px">
     Add New Employes
 </a>
+<a style="padding-left: 15px" (click)="logout()">
+    Logout
+</a>
