--- a/src/app/employees-list/employees-list.component.html
+++ b/src/app/employees-list/employees-list.component.html
@@ -45,5 +45,5 @@
 <button (click)="resetEmpList()">Reset Employees List</button>
 <br>
 <div style="font-size:12px">
-Employee Records Count : {{employees.length}}
+Employee Records Count : {{employees?.length}}
 </div>
