--- a/src/app/employees-list/employees-list.component.html
+++ b/src/app/employees-list/employees-list.component.html
@@ -1,3 +1,10 @@
+<div style="background-color:lightblue" >
+  <hr>
+  <div>
+    <app-top-bar></app-top-bar>
+  </div>
+  <hr>
+</div>
 <table>
 	<tr>
 		<th>Emp ID</th>
