--- a/src/app/add-new-employee/add-new-employee.component.html
+++ b/src/app/add-new-employee/add-new-employee.component.html
@@ -1,3 +1,10 @@
+<div style="background-color:lightblue" >
+  <hr>
+  <div>
+    <app-top-bar></app-top-bar>
+  </div>
+  <hr>
+</div>
 <form #employeeDetails="ngForm" (ngSubmit)="onSubmitData(employeeDetails)">
 	<table>
 		<tr *ngIf="inupdatemode">
