--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,13 @@
     {{ title }}
   </h3>
 </div>
+<div style="background-color:lightblue" >
+  <hr>
+  <div>
+    <app-top-bar></app-top-bar>
+  </div>
+  <hr>
+</div>
 <router-outlet></router-outlet>
 <div style="text-align:right; font-size: 12px">
   v{{version}}
