--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
 <a routerLink="/employeesList">
     List All Employes
 </a>
-<a [routerLink]="['/addNewEmployee','-1']" style="padding-left: 15px">
+<a [routerLink]="['/addNewEmployee']" style="padding-left: 15px">
     Add New Employes
 </a>
 <a style="padding-left: 15px" (click)="logout()">
