--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     {{ title }}
   </h3>
 </div>
-<div style="background-color:lightblue" >
+<div style="background-color:lightblue" *ngIf="isUserAuthorized">
   <hr>
   <div>
     <app-top-bar></app-top-bar>
