--- a/src/app/employees-list/employees-list.component.html
+++ b/src/app/employees-list/employees-list.component.html
@@ -5,7 +5,7 @@
 		<th>Last Name</th>
 		<th>Manager ID</th>
 		<th>Hire Date</th>
-		<th>Update Action</th>
+		<th *ngIf="currentUseRole=='admin'">Update Action</th>
 	</tr>
 	<tr *ngFor="let e of employees" (dblclick)="doubleClick(e.id)">
 		<td>{{e.id}}</td>
@@ -33,7 +33,7 @@
         <input type="text" name="hiredate" [(ngModel)]="e.employeeNewInfo.hiredate" (keyup)="onKeyUp($event,e.id)">
       </span>
     </td>
-    <td>
+    <td *ngIf="currentUseRole=='admin'">
       <button *ngIf="e.editEnabled" (click)="onCommitUpdate(e.id)" >Commit</button>
       <button *ngIf="e.editEnabled" (click)="onCancelUpdate(e.id)" >Cancel</button>
       <button *ngIf="!e.editEnabled" (click)="onUpdate(e.id)" >Update</button>
